# assay

./: .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: assay.md  cross-learn.md  eod.md  morning.md  postmortem.md  ship.md  spec.md  weekly.md
.claude/skills/commit-protocol/: SKILL.md
.claude/skills/done-gate/: SKILL.md
.claude/skills/judge-panel/: SKILL.md
.claude/skills/mcp-router/: SKILL.md
.claude/skills/notion-bridge/: SKILL.md
.claude/skills/operator-model/: SKILL.md
.claude/skills/plugin-packager/: SKILL.md
.claude/skills/postmortem/: SKILL.md
.claude/skills/project-memory/: SKILL.md
.claude/skills/session-recall/: SKILL.md
.claude/skills/skill-curator/: SKILL.md
.claude/skills/spec-builder/: SKILL.md
.github/workflows/: ci.yml
demo/: README.md  demo.tape  ship.tape
hooks/: README.md  composed-statusline.sh  proposal-count.sh  proposal-watcher.sh
scripts/: personalize.sh
templates/: deploy.md
tests/: conftest.py  test_commands.py  test_docs_links.py  test_hooks.py  test_judge_panel.py  test_plugin_manifest.py  test_skills.py
